[gd_scene load_steps=3 format=3 uid="uid://cfvekktc3lja0"]

[ext_resource type="Script" uid="uid://dk18x5r8xm1c6" path="res://src/scenes/objects/blocks/invisible_border.gd" id="1_76ort"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_sva5o"]

[node name="InvisibleBorder" type="Node2D"]
script = ExtResource("1_76ort")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("SegmentShape2D_sva5o")

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
